# reflex-platform

./: .ghci  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  ChangeLog.md  CrashTest.hs  Dockerfile  Emoji.hs  HACKING.md  LICENSE  Makefile  README.md  STACK.md  TUTORIAL.md  Vagrantfile  android_deps  benchmark  benchmark-shell.nix  benchmark.nix  buildCrashTest  bump-nix-installer.sh  cabal.project  cache  cache.nix  common-setup.sh  default.nix  dir-locals.nix  docker-compose.yml  docs-for  enable-cache  enable-nixcache  env.nix  fetch-install-nix  fixGhcjsProfilingOutput  generate-project-docs.sh  ghc-fix-T14251-on-ARM-2e23e1c7.patch  ghcidCrashTest  (+52 more)
.circleci/: config.yml
HaskellForMaths/: HaskellForMaths.cabal  license.txt
HaskellForMaths/Math/Algebra/: LinearAlgebra.hs
HaskellForMaths/Math/Algebra/Field/: Base.hs  Extension.hs
HaskellForMaths/Math/Algebra/Group/: CayleyGraph.hs  PermutationGroup.hs  RandomSchreierSims.hs  SchreierSims.hs  StringRewriting.hs  Subquotients.hs
HaskellForMaths/Math/Algebra/NonCommutative/: GSBasis.hs  NCPoly.hs  TensorAlgebra.hs
HaskellForMaths/Math/Algebras/: AffinePlane.hs  Commutative.hs  GroupAlgebra.hs  LaurentPoly.hs  Matrix.hs  NonCommutative.hs  Octonions.hs  Quaternions.hs  Structures.hs  TensorAlgebra.hs  TensorProduct.hs  VectorSpace.hs
HaskellForMaths/Math/Combinatorics/: CombinatorialHopfAlgebra.hs  Design.hs  Digraph.hs  FiniteGeometry.hs  Graph.hs  GraphAuts.hs  Hypergraph.hs  IncidenceAlgebra.hs  LatinSquares.hs  Matroid.hs  Poset.hs  StronglyRegularGraph.hs
HaskellForMaths/Math/Common/: IntegerAsType.hs  ListSet.hs
HaskellForMaths/Math/CommutativeAlgebra/: GroebnerBasis.hs  Polynomial.hs
HaskellForMaths/Math/Core/: Field.hs  Utils.hs
HaskellForMaths/Math/NumberTheory/: Factor.hs  Prime.hs  QuadraticField.hs
HaskellForMaths/Math/Projects/: MiniquaternionGeometry.hs  RootSystem.hs  Rubik.hs
HaskellForMaths/Math/Projects/ChevalleyGroup/: Classical.hs  Exceptional.hs
HaskellForMaths/Math/Projects/KnotTheory/: Braid.hs  IwahoriHecke.hs  LaurentMPoly.hs  TemperleyLieb.hs
HaskellForMaths/Math/QuantumAlgebra/: OrientedTangle.hs  QuantumPlane.hs  Tangle.hs  TensorCategory.hs
HaskellForMaths/Math/Test/: TDesign.hs  TField.hs  TFiniteGeometry.hs  TGraph.hs  TNonCommutativeAlgebra.hs  TPermutationGroup.hs  TRootSystem.hs  TSubquotients.hs  TestAll.hs
HaskellForMaths/Math/Test/TAlgebras/: TGroupAlgebra.hs  TMatrix.hs  TOctonions.hs  TQuaternions.hs  TStructures.hs  TTensorProduct.hs  TVectorSpace.hs
HaskellForMaths/Math/Test/TCombinatorics/: TCombinatorialHopfAlgebra.hs  TDigraph.hs  TFiniteGeometry.hs  TGraphAuts.hs  TIncidenceAlgebra.hs  TMatroid.hs  TPoset.hs
HaskellForMaths/Math/Test/TCommutativeAlgebra/: TGroebnerBasis.hs  TPolynomial.hs
HaskellForMaths/Math/Test/TCore/: TField.hs  TUtils.hs
HaskellForMaths/Math/Test/TNumberTheory/: TPrimeFactor.hs  TQuadraticField.hs
HaskellForMaths/Math/Test/TProjects/: TMiniquaternionGeometry.hs
a/: A.hs  a.cabal
android/: AndroidManifest.xml.nix  Application.mk.nix  androidComposition.nix  build-gradle-app.nix  build.gradle.nix  build.nix  buildIcons.nix  ctype_get_mb_cur_max.c  default.nix  deploy.sh  haskellActivity.c  impl.nix  keystore  launch_screen.xml.nix  strings.xml.nix  stubs.c  stubs.h  styles.xml.nix
android-activity/: github.json
android/android-activity/: LICENSE  android-activity.cabal  default.nix
android/android-activity/cbits/: HaskellActivity.c
android/android-activity/cbits/include/: HaskellActivity.h
android/android-activity/java/systems/obsidian/: HaskellActivity.java
android/android-activity/src/Android/: HaskellActivity.hsc
benchmarking/: compareBenchmarkResults.hs
concat/: github.json
distributive/: github.json
doc/: Internal.md  Migration.md  Project.md  WorkOn.md
docs/: GCROOTS.md  platform-support.md  project-development-contents.md  project-development.md  project-development.rst  project-editor.md  project-options.md  qa-guide.md
example/: default.nix
examples/: host.hs
fetchCabalHashesZip/: default.nix
gargoyle/: github.json
gc-roots/: README.md
ghcjs/: git.json  github.json
ghcjs-8.4.2/: git.json
ghcjs-boot/: git.json
ghcjs-dom/: github.json
haskell-overlays/: any-7.8.nix  any-8.0.nix  any-8.10.nix  any-8.2.nix  any-8.4.nix  any-8.6.nix  any-8.nix  any-head.nix  default.nix  disable-template-haskell.nix  expose-all-unfoldings.nix  ghc-7.x.y.nix  ghc-8.0.nix  ghc-8.2.1.nix  ghc-8.2.2.nix  ghc-8.2.x.nix  ghc-8.4.2.nix  ghc-8.4.y.nix  ghc-8.x.y.nix  ghc-head.nix  ghc.nix  ghcjs-8.10-text-jsstring.nix  ghcjs-8.4-text-jsstring.nix  ghcjs-8.6-text-jsstring.nix  ghcjs-base.patch  ghcjs.nix  haddock.patch  hie.nix  ios.nix  load-splices.nix  profiling.nix  reflex-packages.nix  save-splices.nix  untriaged.nix
ios/: PackageApplication  default.nix
js-framework-benchmark/: git.json
jsaddle/: github.json
jsaddle-dom/: github.json
lib/: default.nix
modules/: cross-driver.nix  hackage-driver.nix  hardening-driver.nix  obelisk.nix  project.nix  shell-driver.nix  splice-driver.nix  src-driver.nix  thunk-driver.nix  workon.nix
nixpkgs-old-chromium/: github.json
nixpkgs-overlays/: android-8.10-splices.patch  bug-16893-workaround.patch  call-hackage-direct.nix  ghc.nix  unix-android.patch
(+521 files in other folders)
